tests/NormalTests/paczka1/small_fuzzy/30753594.err
Error in line 4: m60kg4tNCu A342 89,0
Error in line 9: 73YY A920 67,8
